# duck-rage

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
src/: lib.rs
test/data/: test_identity.txt  test_secrets.age
test/sql/: duck_rage.test
